--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<!--start text-->
 		<div id="text"></div>
 		<!--end text-->
-		<embed src="music.mp3" hidden="true"/>
+		<embed src="images/music.mp3" hidden="true"/>
 		<!-- <audio src="music.mp3" hidden="true" loop="true" autoplay></audio> -->
 		<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 		<script>
