--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<li><img src="images/a3.png" width="" height="" alt=""/></li>
 					<li><img src="images/a4.png" width="" height="" alt=""/></li>
 					<li><img src="images/a6.png" width="" height="" alt=""/></li>
-					<li><img src="images/a2.png" width="" height="" alt=""/></li>
+					<li><img src="images/4.png" width="" height="" alt=""/></li>
 					<li><img src="images/1.png" width="" height="" alt=""/></li>
 					<li><img src="images/a1.png" width="" height="" alt=""/></li>
 				</ul>
