--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 			<div class="pic">
 				<ul>
 					<li><img src="images/a3.png" width="" height="" alt=""/></li>
-					<li><img src="images/a4.png" width="" height="" alt=""/></li>
+					<li><img src="images/1.png" width="" height="" alt=""/></li>
 					<li><img src="images/a6.png" width="" height="" alt=""/></li>
 					<li><img src="images/4.png" width="" height="" alt=""/></li>
-					<li><img src="images/1.png" width="" height="" alt=""/></li>
+					<li><img src="images/a4.png" width="" height="" alt=""/></li>
 					<li><img src="images/a1.png" width="" height="" alt=""/></li>
 				</ul>
 			</div>
@@ -90,7 +90,7 @@
 		<div id="text"></div>
 		<!--end text-->
 		<embed src="images/music.mp3" hidden="true"/>
-		<!-- <audio src="music.mp3" hidden="true" loop="true" autoplay></audio> -->
+		<!-- <audio src="music1.mp3" hidden="true" loop="true" autoplay></audio> -->
 		<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 		<script>
 			$(".pic ul li").each(function(i){//遍历
